--- a/styles/login.module.css
+++ b/styles/login.module.css
@@ -1,18 +1,23 @@
 .login {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   position: absolute;
   top: 39%;
   left: 50%;
   transform: translate(-50%, -50%);
 
-  padding: 15px;
+  padding: 20px 15px;
   box-shadow: 0 0 2px #ccc, 1px 1px 5px #ccc;
   border-radius: 5px;
 
-  min-width: 35rem;
-  min-height: 32rem;
+  min-width: 34rem;
+  min-height: 36rem;
+}
+
+.input-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .item {
@@ -21,7 +26,4 @@
 
 .item span {
   flex-basis: 100px;
-}
-
-.item input {
 }
