--- a/components/Button.module.css
+++ b/components/Button.module.css
@@ -4,7 +4,7 @@
  * @Github: https://github.com/LadyYang
  * @Email: 1763615252@qq.com
  * @Date: 2020-08-05 09:54:24
- * @LastEditTime: 2020-08-05 11:36:30
+ * @LastEditTime: 2020-08-06 00:11:13
  * @LastEditors: chtao
  * @FilePath: \time\components\Button.module.css
  */
@@ -26,7 +26,7 @@
   transition: all 0.5s;
 }
 
-.btn[class*='btn-primary']:hover {
+.btn[class*='btn-primary']:not([class*='btn-disable']):hover {
   opacity: 0.7;
 }
 
@@ -69,7 +69,7 @@
   cursor: not-allowed;
   color: #666;
   background: #f5f5f5;
-  border-color: #d9d9d9;
+  border: 1px solid #ccc;
   text-shadow: none;
   box-shadow: none;
   opacity: 1;
