--- a/styles/login.module.css
+++ b/styles/login.module.css
@@ -6,7 +6,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  padding: 20px 15px;
+  padding: 15px;
   box-shadow: 0 0 2px #ccc, 1px 1px 5px #ccc;
   border-radius: 5px;
 
