--- a/components/Pagination.module.css
+++ b/components/Pagination.module.css
@@ -35,6 +35,16 @@
   margin-right: 8px;
 }
 
+.pages {
+  font-size: 1.6rem;
+  display: inline-block;
+  min-width: 32px;
+  height: 32px;
+  line-height: 32px;
+  margin-right: 8px;
+  border-radius: 2px;
+}
+
 @keyframes hide-ellipses {
   0% {
     opacity: 1;
