--- a/components/Input.module.css
+++ b/components/Input.module.css
@@ -4,7 +4,7 @@
   box-shadow: 0 0 1px #ccc, inset 0 0 #ccc;
   transition: all 0.6s;
 
-  border-radius: 2px;
+  border-radius: 5px;
 
   height: 40px;
   padding: 8px;
@@ -20,6 +20,7 @@
 
 .icon {
   display: flex;
+  font-size: 1.6rem;
   justify-content: center;
   align-items: center;
   user-select: none;
