--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -1,3 +1,17 @@
 .home {
-  padding: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.action {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.action div {
+  width: 50px;
+  margin-right: 10px;
 }
